jaeger-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.network/jager-rd-default: "true"
    io.kompose.service: jaeger
  name: jaeger
spec:
  containers:
    - env:
        - name: COLLECTOR_ZIPKIN_HTTP_PORT
          value: "9411"
      image: jaegertracing/all-in-one:latest
      name: jaeger
      ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 5778
        - containerPort: 6831
          protocol: UDP
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 9411
      resources: {}
  restartPolicy: OnFailure
status: {}
