loadbalancer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: loadbalancer
  name: loadbalancer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loadbalancer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/jager-rd-default: "true"
        io.kompose.service: loadbalancer
    spec:
      containers:
        - args:
            - -logservice
            - http://logservice:6000
          image: loadbalancer
          name: loadbalancer
          ports:
            - containerPort: 2000
            - containerPort: 2001
          resources: {}
      restartPolicy: Always
status: {}
