logservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: logservice
  name: logservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/jager-rd-default: "true"
        io.kompose.service: logservice
    spec:
      containers:
        - image: logservice
          name: logservice
          ports:
            - containerPort: 6000
          resources: {}
      restartPolicy: Always
status: {}
