web-one-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: web-one
  name: web-one
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web-one
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/jager-rd-default: "true"
        io.kompose.service: web-one
    spec:
      containers:
        - args:
            - -loadbalancer
            - http://loadbalancer:2001
            - -logservice
            - http://logservice:6000
          image: web-one
          name: web-one
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
