loadbalancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: loadbalancer
  name: loadbalancer
spec:
  ports:
    - name: "2000"
      port: 2000
      targetPort: 2000
    - name: "2001"
      port: 2001
      targetPort: 2001
  selector:
    io.kompose.service: loadbalancer
status:
  loadBalancer: {}
